[package]
name = "TWiG_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get_prs = { path = "get_prs" }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }

[workspaces]
members = [ "get_prs" ]
