[package]
name = "TWiG_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.20.0"
tokio =  { version = "1.12", features = [ "macros", "rt-multi-thread" ] }
time = { version = "0.3.9", features = [ "formatting", "macros", "parsing" ] }

